# Tensorrt-RTDETR-FeiHangBei

./: README.md  compare_results.py  convert_dataset.py  predict.py  predict.py-bak  pt_2_engine.py
deployment/: CMakeLists.txt
deployment/include/: rtdetr.h  rtdetr_utils.h
deployment/src/: rtdetr.cpp
deployment/test/: config.cpp  config.h  config.ini  main.cpp  vast_memory.h
deployment/test/ini/: dictionary.c  dictionary.h  iniparser.c
deployment/test/otl/thread/: thread.cpp  thread.h  thread_pool.cpp  thread_pool.h
docker-for-developer/: Dockerfile  requirements.txt
trt_model/: trt_fp16_converter.sh  trt_fp32_converter.sh
